# test-assignment-APR

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASK.md  TODO.md  docker-compose.yml  docs.json  pyproject.toml  pytest.ini  requirements.txt
src/: import_data.py  main.py  models.py  parser.py  router.py
src/core/: config.py  database.py  dependencies.py
src/schemas/: post.py
tests/: conftest.py  test_router.py
