[project]
name = "test-assignment-apr"
version = "0.1.0"
description = "Тестовое задание в компанию Аналитические программные решения"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elasticsearch>=9.4.1",
    "fastapi>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
