[project]
name = "test-assignment-apr"
version = "0.1.0"
description = "Тестовое задание в компанию Аналитические программные решения"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncpg>=0.31.0",
    "elasticsearch>=9.4.1",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
